force-app/main/default/objects/Campaign_Member_Status__mdt/Campaign_Member_Status__mdt.object-meta.xml
<CustomObject>
    <description>Custom Metadata to configure Campaign member status values</description>
    <label>Campaign Member Status</label>
    <pluralLabel>Campaign Member Statuses</pluralLabel>
</CustomObject>