force-app/main/default/objects/Campaign_Member_Status__mdt/fields/Campaign_Member_Status_Label__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Status_Label__c</fullName>
    <description>The value to be displayed as Campaign Member status</description>
    <label>Campaign Member Status Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>