force-app/main/default/objects/Campaign_Member_Status__mdt/fields/Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Type__c</fullName>
    <description>Campaign Member status values are dependent on Campaign Type</description>
    <label>Campaign Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>