force-app/main/default/objects/Campaign_Member_Status__mdt/fields/HasResponded__c.field-meta.xml
<CustomField>
    <fullName>HasResponded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check if the member status value is counted as Responded</description>
    <label>HasResponded</label>
    <type>Checkbox</type>
</CustomField>